--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ loader_version=0.15.10
 # Mod Properties
 mod_version=1.0.0
 maven_group=com.example
-archives_base_name=modid
+archives_base_name=nwwc
 
 # Dependencies
 fabric_version=0.92.2+1.20.1
